@@ -1,3 +1,5 @@
+Mar 27, 2012: libarchive 3.0.4 released
+
 Feb 05, 2012: libarchive development now hosted at GitHub.
     http://libarchive.github.com/
 Feb 05, 2012: libarchive's issue tracker remains at Google Code.
